--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Product Name and price fetched from UI and saved in HashMap as:{215=Tigran Aloe Isolani, 199=Vassily Aloe Attack, 365=Wilhelm Aloe Hydration Lotion}<br></td></tr>
-<tr><td>Low Product Price is: 199 Product name is: Vassily Aloe Attack</td></tr>
-<tr><td>Product Name and price fetched from UI and saved in HashMap as:{128=Boris Almond and Honey, 353=Mikhail Almond and Talc, 195=Max honey and almond moisturiser}<br></td></tr>
-<tr><td>Low Product Price is: 128 Product name is: Boris Almond and Honey</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
