--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,5 +1,7 @@
-<h2>Reporter output</h2><table><tr><td>Product Name and price fetched from UI and saved in HashMap as:{289=Anatoly Ultra Sunblock SPF-50, 250=Gary Bio Sandalwood SPF-50}<br></td></tr>
-<tr><td>Low Product Price is: 250 Product name is: Gary Bio Sandalwood SPF-50</td></tr>
-<tr><td>Product Name and price fetched from UI and saved in HashMap as:{195=Vishy La Shield Sunscreen spf-30, 121=Paul Magnificient SPF-30, 140=Magnus Resistant Sunscreen SPF-30}<br></td></tr>
+<h2>Reporter output</h2><table><tr><td>Product Name and price fetched from UI and saved in HashMap as:{289=Anatoly Ultra Sunblock SPF-50, 222=Akiba Amazing SPF-50}<br></td></tr>
+<tr><td>High Product Price is: 289 Product name is: Anatoly Ultra Sunblock SPF-50</td></tr>
+<tr><td>Low Product Price is: 222 Product name is: Akiba Amazing SPF-50</td></tr>
+<tr><td>Product Name and price fetched from UI and saved in HashMap as:{160=Vladimir Sun Expert SPF-30, 195=Vishy La Shield Sunscreen spf-30, 121=Paul Magnificient SPF-30}<br></td></tr>
+<tr><td>High Product Price is: 195 Product name is: Vishy La Shield Sunscreen spf-30</td></tr>
 <tr><td>Low Product Price is: 121 Product name is: Paul Magnificient SPF-30</td></tr>
 </table>
