--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fc6dc4">  <td>22/01/20 01:11:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:weathershopper.SeleniumTest@4e91d63f]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="fc6dc4">  <td>22/01/20 01:11:18</td>   <td>-24714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.init()[pri:0, instance:weathershopper.SeleniumTest@4e91d63f]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="7d68a6">  <td>22/01/20 01:11:20</td>   <td>-22650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SeleniumTest.BrowserAutomation()[pri:0, instance:weathershopper.SeleniumTest@4e91d63f]">BrowserAutomation</td> 
-  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="73a577">  <td>22/01/22 20:43:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:weathershopper.SeleniumTest@54c562f7]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2141817446</td>   <td></td> </tr>
+<tr bgcolor="a9af70">  <td>22/01/22 20:42:52</td>   <td>-13832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SeleniumTest.BrowserAutomation()[pri:0, instance:weathershopper.SeleniumTest@54c562f7]">BrowserAutomation</td> 
+  <td>main@2141817446</td>   <td></td> </tr>
+<tr bgcolor="73a577">  <td>22/01/22 20:42:49</td>   <td>-17806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initiateBrowser()[pri:0, instance:weathershopper.SeleniumTest@54c562f7]">&gt;&gt;initiateBrowser</td> 
+<td>&nbsp;</td>  <td>main@2141817446</td>   <td></td> </tr>
 </table>
