--- a/test-output/old/TestSuite/reporter-output.html
+++ b/test-output/old/TestSuite/reporter-output.html
@@ -1,13 +1,31 @@
-<h2>Reporter output</h2><table><tr><td>Product Name and price fetched from UI and saved in HashMap as:{215=Tigran Aloe Isolani, 216=Jose Intensive Care Aloe Body Lotion, 299=Emmanuel Aloe Vera Beauty Gel, 365=Wilhelm Aloe Hydration Lotion}<br></td></tr>
-<tr><td>High Product Price is: 365 Product name is: Wilhelm Aloe Hydration Lotion</td></tr>
-<tr><td>Low Product Price is: 215 Product name is: Tigran Aloe Isolani</td></tr>
-<tr><td>Product Name and price fetched from UI and saved in HashMap as:{128=Boris Almond and Honey, 360=Alexander Almond & Honey Moisturiser}<br></td></tr>
-<tr><td>High Product Price is: 360 Product name is: Alexander Almond & Honey Moisturiser</td></tr>
-<tr><td>Low Product Price is: 128 Product name is: Boris Almond and Honey</td></tr>
-<tr><td>Product Name and price fetched from UI and saved in HashMap as:{250=Gary Bio Sandalwood SPF-50, 222=Akiba Amazing SPF-50}<br></td></tr>
-<tr><td>High Product Price is: 250 Product name is: Gary Bio Sandalwood SPF-50</td></tr>
-<tr><td>Low Product Price is: 222 Product name is: Akiba Amazing SPF-50</td></tr>
-<tr><td>Product Name and price fetched from UI and saved in HashMap as:{160=Vladimir Sun Expert SPF-30, 195=Vishy La Shield Sunscreen spf-30, 140=Magnus Resistant Sunscreen SPF-30}<br></td></tr>
-<tr><td>High Product Price is: 195 Product name is: Vishy La Shield Sunscreen spf-30</td></tr>
-<tr><td>Low Product Price is: 140 Product name is: Magnus Resistant Sunscreen SPF-30</td></tr>
+<h2>Reporter output</h2><table><tr><td>Getting the System Operating System </td></tr>
+<tr><td>The operating system is :mac os x</td></tr>
+<tr><td>This MAC browser is :Chrome</td></tr>
+<tr><td>Waiting for the page to load</td></tr>
+<tr><td>Launching the Web Application</td></tr>
+<tr><td>The title of the application is ====>Current Temperature</td></tr>
+<tr><td>Getting the temperature string value from the application</td></tr>
+<tr><td>converted Temp value to int is ===>35</td></tr>
+<tr><td>The temperature is above 34 and we are going to shop for Suncreens</td></tr>
+<tr><td>Waiting for the page to load</td></tr>
+<tr><td>Low Product Price which contains SPF-50 is: 222 with Product name : Akiba Amazing SPF-50</td></tr>
+<tr><td>Low Product Price which contains SPF-30 is: 116 with Product name : Vassily Brilliant SPF-30</td></tr>
+<tr><td>Waiting for the page to load</td></tr>
+<tr><td>The total number of products added to cart is :2</td></tr>
+<tr><td>The total cost of the Products is :338</td></tr>
+<tr><td>Waiting for the page to load</td></tr>
+<tr><td>click the PaywithCard button after addding th eproducts to CART </td></tr>
+<tr><td>Switch to Stripe pop up frame</td></tr>
+<tr><td>Entering the email ID</td></tr>
+<tr><td>Entering the Card Niumber </td></tr>
+<tr><td>Getting the Local date from the System and format to string with 1 year ahead</td></tr>
+<tr><td>Enetring Expiry Date</td></tr>
+<tr><td>Enetring CVV</td></tr>
+<tr><td>Enetring ZIP Code</td></tr>
+<tr><td>Click Payment</td></tr>
+<tr><td>Waiting for the page to load</td></tr>
+<tr><td>Validating Payment</td></tr>
+<tr><td>The payemnt attributeCheckout</td></tr>
+<tr><td>Payment Failed </td></tr>
+<tr><td>Closing the Browser</td></tr>
 </table>
