--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-TestSuite" class="navigator-link">
-              <span class="suite-name border-passed">TestSuite</span>
+              <span class="suite-name border-failed">TestSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,12 +51,12 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-TestSuite" class="navigator-link ">
-                    <span>testng.xml</span>
+                    <span>testng_Chrome.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-TestSuite" class="navigator-link ">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,26 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-TestSuite" class="hide-methods passed suite-TestSuite"> (hide)</a> <!-- hide-methods passed suite-TestSuite -->
-                      <a href="#" panel-name="suite-TestSuite" class="show-methods passed suite-TestSuite"> (show)</a> <!-- show-methods passed suite-TestSuite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-TestSuite" class="hide-methods failed suite-TestSuite"> (hide)</a> <!-- hide-methods failed suite-TestSuite -->
+                      <a href="#" panel-name="suite-TestSuite" class="show-methods failed suite-TestSuite"> (show)</a> <!-- show-methods failed suite-TestSuite -->
                     </span>
-                    <div class="method-list-content passed suite-TestSuite">
+                    <div class="method-list-content failed suite-TestSuite">
                       <span>
-                        <img src="passed.png" width="3%"/>
+                        <img src="failed.png" width="3%"/>
                         <a href="#" panel-name="suite-TestSuite" title="weathershopper.SeleniumTest" class="method navigator-link" hash-for-method="WeatherShopperEndToEndAutomation">WeatherShopperEndToEndAutomation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-TestSuite" title="weathershopper.SeleniumTest" class="method navigator-link" hash-for-method="WeatherShopperEndToEndAutomation">WeatherShopperEndToEndAutomation</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-TestSuite -->
+                    </div> <!-- method-list-content failed suite-TestSuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -124,9 +119,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-TestSuite" class="panel TestSuite">
-          <div class="suite-TestSuite-class-passed">
+          <div class="suite-TestSuite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">weathershopper.SeleniumTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -135,39 +130,31 @@
                   <a name="WeatherShopperEndToEndAutomation">
                   </a> <!-- WeatherShopperEndToEndAutomation -->
                   <span class="method-name">WeatherShopperEndToEndAutomation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="WeatherShopperEndToEndAutomation">
-                  </a> <!-- WeatherShopperEndToEndAutomation -->
-                  <span class="method-name">WeatherShopperEndToEndAutomation</span>
+                  <div class="stack-trace">java.lang.AssertionError: The Payment Failed expected [true] but found [false]
+	at weathershopper.SeleniumTest.WeatherShopperEndToEndAutomation(SeleniumTest.java:159)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 30 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-TestSuite-class-passed -->
+          </div> <!-- suite-TestSuite-class-failed -->
         </div> <!-- panel TestSuite -->
         <div panel-name="test-xml-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/Users/pranaydheer/eclipse-workspace/Mavenjava/testng.xml</span>
+            <span class="header-content">/Users/pranaydheer/eclipse-workspace/Mavenjava/testng_Chrome.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;TestSuite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;ChromeTest&quot;&gt;
+&lt;suite thread-count=&quot;2&quot; name=&quot;TestSuite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;2&quot; name=&quot;ChromeTest&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;weathershopper.SeleniumTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ChromeTest --&gt;
-  &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;FirefoxTest&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;Firefox&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;weathershopper.SeleniumTest&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- FirefoxTest --&gt;
 &lt;/suite&gt; &lt;!-- TestSuite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -180,9 +167,6 @@
             <ul>
               <li>
                 <span class="test-name">ChromeTest (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">FirefoxTest (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -208,20 +192,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'WeatherShopperEndToEndAutomation')
 data.setCell(0, 2, 'weathershopper.SeleniumTest')
-data.setCell(0, 3, 15785);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'WeatherShopperEndToEndAutomation')
-data.setCell(1, 2, 'weathershopper.SeleniumTest')
-data.setCell(1, 3, 13457);
+data.setCell(0, 3, 10248);
 window.suiteTableData['TestSuite']= { tableData: data, tableDiv: 'times-div-TestSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-TestSuite">
               </div> <!-- times-div-TestSuite -->
             </div> <!-- times-div -->
@@ -235,23 +215,31 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">WeatherShopperEndToEndAutomation</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Product Name and price fetched from UI and saved in HashMap as:{215=Tigran Aloe Isolani, 216=Jose Intensive Care Aloe Body Lotion, 299=Emmanuel Aloe Vera Beauty Gel, 365=Wilhelm Aloe Hydration Lotion}<br></span>
-                <span class="reporter-method-output">High Product Price is: 365 Product name is: Wilhelm Aloe Hydration Lotion</span>
-                <span class="reporter-method-output">Low Product Price is: 215 Product name is: Tigran Aloe Isolani</span>
-                <span class="reporter-method-output">Product Name and price fetched from UI and saved in HashMap as:{128=Boris Almond and Honey, 360=Alexander Almond & Honey Moisturiser}<br></span>
-                <span class="reporter-method-output">High Product Price is: 360 Product name is: Alexander Almond & Honey Moisturiser</span>
-                <span class="reporter-method-output">Low Product Price is: 128 Product name is: Boris Almond and Honey</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">WeatherShopperEndToEndAutomation</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Product Name and price fetched from UI and saved in HashMap as:{250=Gary Bio Sandalwood SPF-50, 222=Akiba Amazing SPF-50}<br></span>
-                <span class="reporter-method-output">High Product Price is: 250 Product name is: Gary Bio Sandalwood SPF-50</span>
-                <span class="reporter-method-output">Low Product Price is: 222 Product name is: Akiba Amazing SPF-50</span>
-                <span class="reporter-method-output">Product Name and price fetched from UI and saved in HashMap as:{160=Vladimir Sun Expert SPF-30, 195=Vishy La Shield Sunscreen spf-30, 140=Magnus Resistant Sunscreen SPF-30}<br></span>
-                <span class="reporter-method-output">High Product Price is: 195 Product name is: Vishy La Shield Sunscreen spf-30</span>
-                <span class="reporter-method-output">Low Product Price is: 140 Product name is: Magnus Resistant Sunscreen SPF-30</span>
+                <span class="reporter-method-output">Launching the Web Application</span>
+                <span class="reporter-method-output">The title of the application is ====>Current Temperature</span>
+                <span class="reporter-method-output">Getting the temperature string value from the application</span>
+                <span class="reporter-method-output">converted Temp value to int is ===>35</span>
+                <span class="reporter-method-output">The temperature is above 34 and we are going to shop for Suncreens</span>
+                <span class="reporter-method-output">Waiting for the page to load</span>
+                <span class="reporter-method-output">Low Product Price which contains SPF-50 is: 222 with Product name : Akiba Amazing SPF-50</span>
+                <span class="reporter-method-output">Low Product Price which contains SPF-30 is: 116 with Product name : Vassily Brilliant SPF-30</span>
+                <span class="reporter-method-output">Waiting for the page to load</span>
+                <span class="reporter-method-output">The total number of products added to cart is :2</span>
+                <span class="reporter-method-output">The total cost of the Products is :338</span>
+                <span class="reporter-method-output">Waiting for the page to load</span>
+                <span class="reporter-method-output">click the PaywithCard button after addding th eproducts to CART </span>
+                <span class="reporter-method-output">Switch to Stripe pop up frame</span>
+                <span class="reporter-method-output">Entering the email ID</span>
+                <span class="reporter-method-output">Entering the Card Niumber </span>
+                <span class="reporter-method-output">Getting the Local date from the System and format to string with 1 year ahead</span>
+                <span class="reporter-method-output">Enetring Expiry Date</span>
+                <span class="reporter-method-output">Enetring CVV</span>
+                <span class="reporter-method-output">Enetring ZIP Code</span>
+                <span class="reporter-method-output">Click Payment</span>
+                <span class="reporter-method-output">Waiting for the page to load</span>
+                <span class="reporter-method-output">Validating Payment</span>
+                <span class="reporter-method-output">The payemnt attributeCheckout</span>
+                <span class="reporter-method-output">Payment Failed </span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -274,25 +262,15 @@ return data;
                 <span class="method-name">initiateBrowser(Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">initiateBrowser(Firefox)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">WeatherShopperEndToEndAutomation</span>
-                <span class="method-start">2142 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">WeatherShopperEndToEndAutomation</span>
-                <span class="method-start">3737 ms</span>
+                <span class="method-start">1884 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">17195 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">17928 ms</span>
+                <span class="method-start">12135 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
